# app/Models/Task.php
@@ -10,6 +10,10 @@ class Task extends Model
     use HasFactory;
 
     protected $fillable =[
-        'title', 'description','status',
+        'title', 'description','status_id',
     ];
+
+    public function status(){
+        return $this->belongsTo(Status::class);
+    }
 }
